--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -34,7 +34,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="" android:background="@drawable/back"
+        android:text="" android:background="@drawable/blue_border"
         android:id="@+id/vision"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
