--- a/app/src/main/res/layout/activity_find_support.xml
+++ b/app/src/main/res/layout/activity_find_support.xml
@@ -22,7 +22,7 @@
         android:singleLine="true"
         android:imeOptions="actionDone"
         android:padding="10dp"
-        android:background="@drawable/border" />
+        android:background="@drawable/black_border" />
 
     <EditText
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:padding="10dp"
-        android:background="@drawable/border" />
+        android:background="@drawable/black_border" />
 
     <EditText
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:padding="10dp"
-        android:background="@drawable/border" />
+        android:background="@drawable/black_border" />
 
     <Button
         android:layout_width="300dp"
