--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,41 +6,28 @@
     tools:context=".main_ui.StartActivity">
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/imageView2"
-        android:background="@color/blue"
-
-        android:focusableInTouchMode="false"
-        android:focusable="false"
-        android:foreground="@color/orange"
-        android:cropToPadding="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/achievements"
         android:id="@+id/achieveButton"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_alignRight="@+id/imageView2"
-        android:layout_alignEnd="@+id/imageView2"
-        android:background="@color/yellow" />
+        android:background="@color/yellow"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/imageView"
-        android:background="@color/orange"
-        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView3"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:adjustViewBounds="true" />
+        android:layout_alignParentStart="true"
+        android:src="@drawable/splash2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:layout_width="match_parent"
@@ -50,23 +37,13 @@
         android:id="@+id/textView2"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="45sp"
         android:layout_below="@+id/achieveButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:id="@+id/imageView3"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/splash2"
-        android:layout_above="@+id/imageView2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:scaleType="centerCrop" />
+        android:textColor="@color/orange"
+        android:textColorHighlight="@color/abc_background_cache_hint_selector_material_dark" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,21 +55,23 @@
         android:layout_marginBottom="5dp">
         <Button
             android:layout_width="200dp"
-            android:layout_height="85dp"
+            android:layout_height="100dp"
             android:layout_weight=".30"
-            android:text="Find Support"
+            android:text="Find\nSupport"
             android:id="@+id/findSupportButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/oval" />
+            android:background="@drawable/oval"
+            android:gravity="center"
+            android:typeface="monospace" />
         <Button
             android:layout_width="200dp"
-            android:layout_height="85dp"
+            android:layout_height="100dp"
             android:layout_weight=".28"
-            android:text="Saved Support"
+            android:text="Saved\n Support"
             android:id="@+id/savedSuppportButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
@@ -100,19 +79,23 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/oval"
-            android:allowUndo="false" />
+            android:allowUndo="false"
+            android:gravity="center"
+            android:typeface="monospace" />
         <Button
             android:layout_width="200dp"
-            android:layout_height="85dp"
+            android:layout_height="100dp"
             android:layout_weight=".28"
-            android:text="create vision"
+            android:text="create\nvision"
             android:id="@+id/startButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/oval" />
+            android:background="@drawable/oval"
+            android:gravity="center"
+            android:typeface="monospace" />
     </LinearLayout>
 
 </RelativeLayout>
