--- a/app/src/main/res/layout/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout/fragment_meetup_detail.xml
@@ -45,10 +45,11 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="252dp"
             android:id="@+id/meetupImageView"
             android:src="@drawable/meetup"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -58,10 +59,11 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_above="@+id/saveMeetupButton">
+                android:layout_above="@+id/saveMeetupButton"
+                android:layout_alignParentTop="true"
+                android:weightSum="1">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -85,7 +87,8 @@
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"
-                    android:gravity="center_vertical"/>
+                    android:gravity="center_vertical"
+                    android:layout_weight="0.45" />
 
 
             </LinearLayout>
