--- a/app/src/main/res/layout/meetup_list_item.xml
+++ b/app/src/main/res/layout/meetup_list_item.xml
@@ -1,50 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="100dp"
-        android:id="@+id/meetupImageView"
-        android:src="@drawable/meetup"
-        android:scaleType="centerCrop"/>
+    android:layout_height="wrap_content"
+    android:background="@drawable/black_border">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@drawable/black_border">
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:text="left"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".70"
-            />
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="100dp"
+            android:id="@+id/meetupImageView"
+            android:src="@drawable/meetup"
+            android:scaleType="centerCrop"/>
 
-        <TextView
-            android:id="@+id/organizerTextView"
-            android:text="right"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".30" />
-
-    </LinearLayout>
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@drawable/black_border"
+            android:baselineAligned="true">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/nameTextView"
+                android:text="left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:layout_weight=".4"
+                android:background="@drawable/blue_border" />
+
+            <TextView
+                android:id="@+id/organizerTextView"
+                android:text="right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:background="@drawable/blue_border" />
+
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="City"
                 android:id="@+id/cityTextView"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:textColor="@color/colorAccent"/>
-        </RelativeLayout>
+
+                android:layout_weight=".30"
+                android:background="@drawable/blue_border" />
+
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
 
 
